src/theme/main.scss
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html {
    scroll-behavior: smooth;
}

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}
body {
    line-height: 1;
    padding: env(safe-area-inset-top, 0) env(safe-area-inset-right, 0) env(safe-area-inset-bottom, 0)
        env(safe-area-inset-left, 0);
    overflow-x: hidden !important;
    padding-right: 0 !important;
}
ol,
ul {
    list-style: none;
}
blockquote,
q {
    quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}

@import './fonts.css';

* {
    box-sizing: border-box;
    font-family: 'Roboto' !important;
    font-style: normal;
    -webkit-tap-highlight-color: transparent;
    scrollbar-color: var(--color, #355dff) var(--color-wrapper, #04045a);
    scrollbar-width: thin;
}

*::-webkit-scrollbar {
    width: var(--scrollbar-width, 10px);
}
*::-webkit-scrollbar-track {
    background: var(--color-wrapper, #04045a);
}
*::-webkit-scrollbar-thumb {
    border-radius: 15px;
    background: var(--color, #355dff);
}
*::-webkit-scrollbar-thumb:active {
    background: #44e1e2;
}
*::-webkit-scrollbar-thumb:hover {
    background: rgb(67, 116, 255);
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type='number'] {
    -moz-appearance: textfield; /* Firefox */
}

#root {
    overflow: hidden;
    --sat: env(safe-area-inset-top);
    --sar: env(safe-area-inset-right);
    --sab: env(safe-area-inset-bottom);
    --sal: env(safe-area-inset-left);
}

body {
    &.light-theme {
        --scrollbar-width: 6px;
        --color-low: #141874;
        --color-high: #04045a;
        --color-background: linear-gradient(281.48deg, #04045a -16.58%, #141874 97.94%);
        --color-wrapper: #04045a;
        --color: #64d9fe;
    }
    &.dark-theme {
        --scrollbar-width: 6px;
        --color-low: #07150f;
        --color-high: #1e4c39;
        --color-background: linear-gradient(180deg, #1e4c39 0%, #07150f 117.72%);
        --color-wrapper: #133326;
        --color: #a1e1b4;
    }
}

a {
    text-decoration: none;
}

@import './overrides.css';
@import './text.css';
@import './colors.css';
@import './datepicker.css';
@import './hero.css';
@import './medias/market-options.css';
@import './medias/landing-page.css';
@import './icons.css';

